[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["dependencyhandler"]


[project]
name = "dependencyhandler"
authors = [
    {name = "Olaf"},
]
description = "handle dependencies"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["dependencies"]
#license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
#dynamic = ["dependencies"]
dependencies = ['importlib-metadata; python_version<"3.7"', "Levenshtein >= 0.20.9"]
#dynamic = ["version"]
version = "0.0.1"

#[project.optional-dependencies]
#yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/..."
Source = "https://github.com/..."
